# deep-search

./: .gitignore  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
agent/: llm.py  load_prompt.py  main_agent.py
agent/sub_agents/: db_sub_agent.py  internet_sub_agent.py  rag_sub_agent.py
api/: context.py  monitor.py  server.py
output/session_17e38c2d-76f2-464c-be78-2ff5880de8fe/: 空调安装指南.md  空调安装隔热处理建议.md  药品库存信息.md
output/session_5ec5e368-3994-4644-83ac-efa78f238317/: 分析报告.md  分析结果.md
prompt/: prompts.yaml
sql/: db.sql
tools/: internet_search_tool.py  markdown_tools.py  mysql_tools.py  pdf_tools.py  ragflow_tools.py  upload_file_read_tool.py
upload/session_5ec5e368-3994-4644-83ac-efa78f238317/: deepagents_笔记.md
utils/: converter_utils.py  logger_utils.py  path_utils.py
